# ImLog

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ConsoleLog.h  ImLog.h
lib/glad/include/glad/: gl.h
src/: ConsoleLog.cpp  ImLog.cpp
